@@ -64,6 +64,6 @@ public class SomeTestMethodsService implements SomeTestMethods
 
 		l_class = Class.forName(p_strExceptionClass);
 
-		throw (Exception)(l_class.newInstance());
+		throw (Exception)(l_class.getDeclaredConstructor().newInstance());
 	}
 }
